# outdator

./: CHANGELOG.md  README.md  outdator.cabal
.github/workflows/: ci.yml
app/: Main.hs
src/: Outdator.hs
